upgrade versions of dependencies